--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -252,3 +252,7 @@ $modal-md: 500px;
 $modal-sm: 300px;
 $modal-transition: transform 0.4s ease;
 ////////// MODALS VARIABLES //////////
+
+
+$padding: 8px;
+$margin: 8px;
