Order list/detail and list/delete Users

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -174,3 +174,18 @@
     font-size: 14px;
   }
 }
+.bg-blue{
+  background-color: #3c8dbc;
+}
+.blue{
+  color:blue;
+}
+.red{
+  color:red;
+}
+.icon{
+  font-size: 1.1rem;
+}
+.pointer{
+  cursor: pointer;
+}
