--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -189,3 +189,17 @@
 .pointer{
   cursor: pointer;
 }
+#overlay {
+  z-index: 1;
+  position: absolute;
+  top:0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255,255,255,0.7);
+}
+.mySpinner{
+  position: absolute;
+  top:50%;
+  left: 46%;
+}
