--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -206,3 +206,50 @@
 .red-icon-color{
   color:red;
 }
+
+.category-card{
+  display: flex;
+  padding:5px 20px;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+}
+.category-card__item{
+  border:1px solid rgba(0,0,0,.1);
+  border-radius: 10px;
+  padding:7px 10px;
+  box-sizing: border-box;
+  width: 20%;
+  margin:0 15px 25px;
+  cursor: pointer;
+}
+.category-card__img:hover{
+  opacity: .5;
+}
+.category-card__item:hover .category-card__text{
+  color:#0B88EE;
+}
+.category-card__img{
+  padding-bottom: 100%;
+  position: relative;
+  opacity: 1;
+  transition: .3s opacity linear;
+}
+.category-card__img img{
+  position: absolute;
+  left: 0;
+  top:0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+}
+.category-card__text{
+  margin:12px 0 6px;
+  font-size: 15px;
+  font-weight: 700;
+  padding: 10px;
+  text-transform: uppercase;
+  color:#7e7e7e;
+  text-shadow: 0 2px 3px rgba(0,0,0,.5);
+  transition: .2s color linear;
+}
